--- a/templates/dashboard/package.json
+++ b/templates/dashboard/package.json
@@ -9,7 +9,7 @@
     "react": "^16.7.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.3",
     "react-vis": "^1.11.6",
     "react-youtube": "^7.8.0"
   },
