--- a/Emotion Recognition Workaround/manifest.json
+++ b/Emotion Recognition Workaround/manifest.json
@@ -15,6 +15,9 @@
 "content_security_policy": "script-src 'self' https://www.youtube.com/iframe_api; object-src 'self'",
 
   "permissions": [
-    "tabs"
+    "tabs",
+    "activeTab",
+    "http://localhost/*",
+    "https://www.youtube.com/*"
  ]
 }
